2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtk.defs: Add gtk.EntryCompletion.get_text_column.
	Patch by Gian Mario Tagliaretti.

	* gtk/gdk.defs (save_to_callback): Add.

	* gtk/gdk.override (_wrap_gdk_pixbuf_save_to_callback): Wrap
	gdk_pixbuf_save_to_callback.  Fixes #172445.

	* gobject/pygiochannel.c: Add; implements GIOChannel wrappers.
	Fixes #139176: GIOChannel wrapper.

	* gobject/gobjectmodule.c (initgobject): Register IOChannel type
	and some constants.

	* gtk/gdk.defs: Add functions notify_startup_complete,
	get_display_arg_name, get_program_class, set_program_class, and
	get_display.  Fixes #167412.

2005-05-22   Tim Evans  <t.evans@aranz.com>

	* gtk/gtktreeview.override
	(_wrap_gtk_tree_view_map_expanded_rows): Don't unref borrowed
	reference data.user_data.  Reviewed by Gustavo Carneiro; Fixes
	#165373 (crash due to extra Py_XDECREF in
	gtk.TreeView.map_expanded_rows)

2005-05-17  Manish Singh  <yosh@gimp.org>

	* gobject/pygparamspec.c (pyg_param_spec_getattr): make it build
	again (missing })

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygparamspec.c: (pygenum_from_pspec),
	(pygflags_from_pspec): Improve GParamSpec wrapping, fixes 
	bug #170614

2005-05-17  Benjamin Otte <in7y118@public.uni-hamburg.de>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c: (pyg_register_class_init),
	(pyg_run_class_init): Allow multiple calls to 
	pyg_register_class_init, fixes bug #304353

2005-05-17  Benjamin Otte <in7y118@public.uni-hamburg.de>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c:
	* gobject/pygobject-private.h:
	* gobject/pygobject.h:
	* gobject/pygtype.c: (pyg_closure_marshal),
	(pyg_closure_set_exception_handler): Adds exception handling
	support to closures, fixes bug #304357

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Bump version to 2.7.0

	* pango-types.defs (EllipsizeMode): Remove commas
