@@ -1,5 +1,7 @@
 2005-05-22  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gobject/gobjectmodule.c: Wrap g_markup_escape_text. Fixes #164665.
+
 	* gtk/gtk.defs: Add gtk.EntryCompletion.get_text_column.
 	Patch by Gian Mario Tagliaretti.
 
